# server/api/controllers/case/router.js
@@ -7,6 +7,7 @@ export default express
   .post("/", isAuthenticated, controller.createCase)
   .get("/", isAuthenticated, controller.getAllCases)
   .get("/analytics", isAuthenticated, controller.getAnalytics)
+  .get("/stats", isAuthenticated, controller.getStats)
   .get("/:id", isAuthenticated, controller.getCaseByID)
   .post("/medication/markAsGiven/:id", isAuthenticated, controller.markAsGiven)
   .post("/markComplete/:id", isAuthenticated, controller.markAsComplete);
