# server/common/api.yml
@@ -245,6 +245,20 @@ paths:
               schema:
                 $ref: "#/components/schemas/SuccessResponse"
 
+  /cases/stats:
+    get:
+      tags:
+        - Case Service
+      security:
+        - Bearer: []
+      responses:
+        200:
+          description: Success
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/SuccessResponse"
+
 components:
   schemas:
     SignUpResponse:
